SERVER-90352 clear the _timersById map in AsioNetworkingBaton::detachImpl (#22311)

GitOrigin-RevId: 0fcc6f8240e49e29287fb08160194ce4af9cb8b9